--- a/wk_sched.html
+++ b/wk_sched.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
         integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
     <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet" />
-    <link rel="stylesheet" href="wk_6_2.css" />
+    <link rel="stylesheet" href="wk_sched.css" />
     <title> Work Day Scheduler - Faithful's </title>
 </head>
 
@@ -115,7 +115,7 @@
 
         <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-        <script src="wk_6_2.js"></script>
+        <script src="wk_sched.js"></script>
 </body>
 
 </html>
